@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-11T16:08:21Z",
-  "count_outdated" : 1591,
-  "uniques_outdated" : 90,
+  "timestamp" : "2022-06-12T00:39:50Z",
+  "count_outdated" : 1592,
+  "uniques_outdated" : 91,
   "count" : 1645,
   "uniques" : 102,
   "views" : [
-    {
-      "timestamp": "2022-05-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 15,
